--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <div class="logo">
                 <label>Tas<span>te Qu</span>est</label>
+                    BALABLUUUUUUUUUUUUUUUUUU!
             </div>
             <i class="fa-solid fa-bars"></i>
             <ul>
