--- a/index.html
+++ b/index.html
@@ -352,5 +352,11 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="contact-container">
+        
+      </div>
+    </section>
   </body>
 </html>
