--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@
 
     <section>
       <div class="contact-container">
+       <div class="contact-content">
         
+       </div>
       </div>
     </section>
   </body>
