--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#about">About-Us</a></li>
           <li><a href="#service">Services</a></li>
           <li><a href="#menu">Menu</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="fas fa-shopping-cart"></i>
       </nav>
@@ -353,7 +353,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="contact">
       <div class="contact-container">
        <div class="contact-content">
         <img src="Images/Contact-img.jpeg" alt="">
