--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
     <section id="contact">
       <div class="contact-container">
        <div class="contact-content">
-        <img src="Images/Contact-img.jpeg" alt="">
+        <img src="Images/contact-img.jpeg" alt="">
        </div>
       </div>
     </section>
