--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
     </section>
 
     <section id="contact">
-      <div class="contact-container">
-       <div class="contact-content">
-        <img src="Images/contact-img.jpeg" alt="">
+      <div class="contact-page">
+       <div class="contact-container">
+        <img src="Images/contact-img.jpg" alt="">
        </div>
       </div>
     </section>
