--- a/index.html
+++ b/index.html
@@ -357,6 +357,15 @@
       <div class="contact-page">
        <div class="contact-container">
         <img src="Images/contact-img.jpg" alt="">
+        <div class="main-contact">
+        <h2><span>Contact</span> Us</h2>
+        <div class="form">
+          <input type="text" name="" placeholder="Fullname">
+          <input type="text" name="" placeholder="Email">
+          <input type="text" name="" placeholder="Message">
+          <button>Submit</button>
+        </div>
+        </div>
        </div>
       </div>
     </section>
