--- a/index.html
+++ b/index.html
@@ -360,10 +360,12 @@
         <div class="main-contact">
         <h2><span>Contact</span> Us</h2>
         <div class="form">
-          <input type="text" name="" placeholder="Fullname">
-          <input type="text" name="" placeholder="Email">
-          <input type="text" name="" placeholder="Message">
+          <form action="">
+            <input type="text" name="" placeholder="Fullname" required minlength="3" maxlength="20">
+          <input type="email" name="" placeholder="Email" required>
+          <input type="text" name="" placeholder="Message" required>
           <button>Submit</button>
+          </form>
         </div>
         </div>
        </div>
