--- a/index.html
+++ b/index.html
@@ -355,21 +355,35 @@
 
     <section id="contact">
       <div class="contact-page">
-       <div class="contact-container">
-        <img src="Images/contact-img.jpg" alt="">
-        <div class="main-contact">
-        <h2><span>Contact</span> Us</h2>
-        <div class="form">
-          <form action="">
-            <input type="text" name="" placeholder="Fullname" required minlength="3" maxlength="20">
-          <input type="email" name="" placeholder="Email" required>
-          <input type="text" name="" placeholder="Message" required>
-          <button>Submit</button>
-          </form>
+        <h2><span>Contact </span>Us</h2> 
+
+          <div class="contact-container"> 
+            <img src="Images/contact-img.jpg" alt="">
+
+            <div class="contact-writeUp">
+              <h4><i class="fa fa-map-marker"></i>Example road, Taste-Quest building</h4>
+              <p>Ilorin Kwara state, Nigeria.</p>
+
+              <h4><i class="fa fa-phone"></i>+234 8123453452</h4>
+              <p>Monday to Sunday, 7 AM to 6 PM</p>
+              
+              <h4><i class="fa fa-envelope"></i>Info@taste-quest.com</h4>
+              <p>Email us about any complain</p>
+            </div>
+
+            <div class="main-contact">
+            <div class="form">
+              <form action="">
+                <input type="text" name="" placeholder="Fullname" required minlength="3" maxlength="20">
+              <input type="email" name="" placeholder="Email" required>
+              <input type="text" name="" placeholder="Message" required>
+              <button>Submit</button>
+              </form>
+            </div>
+            </div>
+           </div>
         </div>
-        </div>
-       </div>
-      </div>
+
     </section>
   </body>
 </html>
