--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div class="logo">
-          <label>Tas<span>te Qu</span>est</label>
+          <h2>Tas<span>te Qu</span>est</h2>
         </div>
         <i class="fa-solid fa-bars"></i>
         <ul>
@@ -40,33 +40,33 @@
         <button><a href="#menu">Explore Our Menu</a></button>
       </div>
     </section>
-    <!-- ABOUT US -->
-    <section id="about">
-      <div class="about-container">
-        <h2 class="about-title">About <span>Us</span></h2>
-        <div class="about-content">
-          <div class="about-img">
-            <img src="Images/About.jpg" alt="" />
-          </div>
-          <div class="about-text">
-            <p>
-              Welcome to Taste Quest, where dining is transformed into a
-              memorable experience. Located in the heart of the city, Taste
-              Quest is not just a restaurant; it's a destination for food lovers
-              seeking the perfect blend of creativity, flavor, and comfort.
-              We've crafted an atmosphere that invites you to unwind, indulge,
-              and savor the moments shared over exceptional food. Our journey
-              began with a simple yet powerful idea: to create a place where
-              fresh, locally sourced ingredients are used to create innovative
-              and comforting dishes. Each plate we serve is a reflection of our
-              dedication to high-quality ingredients, artistry in cooking, and a
-              passion for hospitality.
-            </p>
-            <button>Join Our Wait-list</button>
-          </div>
-        </div>
+                <!-- ABOUT US -->
+<section id="about">
+  <div class="about-container">
+    <h2>About <span>Us</span></h2>
+    <div class="about-content-wrapper">
+      <div class="about-img-wrapper">
+        <img src="Images/About.jpg" alt="" />
       </div>
-    </section>
+      <div class="about-text-wrapper">
+        <p>
+          Welcome to Taste Quest, where dining is transformed into a
+          memorable experience. Located in the heart of the city, Taste
+          Quest is not just a restaurant; it's a destination for food lovers
+          seeking the perfect blend of creativity, flavor, and comfort.
+          We've crafted an atmosphere that invites you to unwind, indulge,
+          and savor the moments shared over exceptional food. Our journey
+          began with a simple yet powerful idea: to create a place where
+          fresh, locally sourced ingredients are used to create innovative
+          and comforting dishes. Each plate we serve is a reflection of our
+          dedication to high-quality ingredients, artistry in cooking, and a
+          passion for hospitality.
+        </p>
+        <button>Join Our Wait-list</button>
+      </div>
+    </div>
+  </div>
+</section>
     <!-- OUR SERVICES -->
     <section id="service">
       <div class="service-container">
